# w2dynamics_interface

./: .clang-tidy  0001-Replacement-move-for-singly-improved-estimator.patch  0002-Replace-move-for-P3-and-P3pp-equal-time-object.patch  0003-Replacement-move-for-P2-P2pp.patch  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  requirements.txt  w2dynamics.patch
.github/workflows/: build.yml
cmake/: FindMathJax.cmake
doc/: CMakeLists.txt  ChangeLog.md  about.rst  conf.py.in  contents.rst  documentation.rst  index.rst  install.rst
doc/_templates/: sideb.html
doc/guide/: additional_remarks.rst  aim_solution.h5
doc/reference/: parameters_constr_parameters_t.rst  parameters_solve_parameters_t.rst
packaging/: CMakeLists.txt  TRIQS-w2dynamics_interface-3.0.0-foss-2019a-Python-3.7.2.eb  TRIQS-w2dynamics_interface-3.1.0-foss-2021b.eb  TRIQS-w2dynamics_interface-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
python/: CMakeLists.txt  w2dyn_cthyb.py
python/app4triqs/: CMakeLists.txt
python/w2dyn_cthyb/: CMakeLists.txt  __init__.py  converters.py  converters_worm.py  extractor.py  solver.py  version.py.in
share/: CMakeLists.txt  w2dynamics_interface.modulefile.in  w2dynamics_interfacevars.sh.in
share/cmake/: CMakeLists.txt  app4triqs-config.cmake.in  w2dynamics_interface-config-version.cmake.in  w2dynamics_interface-config.cmake.in
test/python/: 2orb_Discrete_Bath.gccver_ge11.ref.h5  2orb_Discrete_Bath.libcxx.ref.h5  2orb_Discrete_Bath.py  2orb_Discrete_Bath.ref.h5  2orb_Discrete_Bath_2pGF.gccver_ge11.ref.h5  2orb_Discrete_Bath_2pGF.libcxx.ref.h5  2orb_Discrete_Bath_2pGF.py  2orb_Discrete_Bath_2pGF.ref.h5  2orb_Discrete_Bath_2pGF_cfg_qmc.py  Basic.py  CMakeLists.txt  Parameters.in  SIAM_Discrete_Bath.gccver_ge11.ref.h5  SIAM_Discrete_Bath.libcxx.ref.h5  SIAM_Discrete_Bath.py  SIAM_Discrete_Bath.ref.h5  check_libcxx.cpp  exctractor_test.py  plot_gf.py  plot_result.py  run_w2dyn_with_class.py  test.py
